Deployments/notes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
  labels:
    app: notes-deployment
  namespace: notes-user-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-deployment
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: notes:v1.1.3
      labels:
        app: notes-deployment
    spec:
      containers:
      - name: notes-deployment
        image: nginx:1.20.2
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 800
          containerPort: 810
        volumeMounts:
          - mountPath: /etc/hosts
            name: hosts
          - mountPath: /var/log/nginx
            name: ngix-logs
      volumes:
        - name: hosts
          hostPath:
            path: /etc/hosts
            
        - name: ngix-logs
          hostPath:
            path: /var/log/nginx
            #  serviceName: notes-deply-service



---
apiVersion: v1
kind: Service
metadata:
  name: notes-deply-service-nsp
  namespace: notes-user-deploy
spec:
  type: NodePort
  ports:
  - nodePort: 31100
    port: 800
    targetPort: 80
    port: 810
    targetPort: 80
    protocol: TCP
#  type: LoadBalancer
#  loadBalancerIP: "192.168.1.109"
  selector:
    app: notes-deployment

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-deply-ingress
  namespace: notes-user-deploy
spec:
  rules:
  - host: www.prashanthgnotes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-deply-service-nsp
            port:
              number: 800
              number: 810
  ingressClassName: nginx
